attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1754046382121_1754046382121.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY EXPO_PUBLIC_API_URL EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_DEV_SERVER_URL EXPO_PUBLIC_APP_STORE_URL EXPO_PUBLIC_SUPPORT_EMAIL
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 43.2% (418/640)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░ 92.5% (1399/1455)
iOS Bundling failed 6082ms node_modules/expo-router/entry.js (1551 modules)
SyntaxError: /Users/expo/workingdir/build/components/SubscriptionModal.tsx: Missing semicolon. (3:3)

[0m [90m 1 |[39m [32m` tags.[39m
 [90m 2 |[39m [32m[39m
[31m[1m>[22m[39m[90m 3 |[39m [32m`[39m[32m``[39mxml
 [90m   |[39m    [31m[1m^[22m[39m
 [90m 4 |[39m [33m<[39m[33mreplit_final_file[39m[33m>[39m
 [90m 5 |[39m [36mimport[39m [33mReact[39m[33m,[39m { useState[33m,[39m useRef[33m,[39m useEffect } [36mfrom[39m [32m'react'[39m[33m;[39m
 [90m 6 |[39m [36mimport[39m {[0m
SyntaxError: SyntaxError: /Users/expo/workingdir/build/components/SubscriptionModal.tsx: Missing semicolon. (3:3)

[0m [90m 1 |[39m [32m` tags.[39m
 [90m 2 |[39m [32m[39m
[31m[1m>[22m[39m[90m 3 |[39m [32m`[39m[32m``[39mxml
 [90m   |[39m    [31m[1m^[22m[39m
 [90m 4 |[39m [33m<[39m[33mreplit_final_file[39m[33m>[39m
 [90m 5 |[39m [36mimport[39m [33mReact[39m[33m,[39m { useState[33m,[39m useRef[33m,[39m useEffect } [36mfrom[39m [32m'react'[39m[33m;[39m
 [90m 6 |[39m [36mimport[39m {[0m
SyntaxError: /Users/expo/workingdir/build/components/SubscriptionModal.tsx: Missing semicolon. (3:3)

[0m [90m 1 |[39m [32m` tags.[39m
 [90m 2 |[39m [32m[39m
[31m[1m>[22m[39m[90m 3 |[39m [32m`[39m[32m``[39mxml
 [90m   |[39m    [31m[1m^[22m[39m
 [90m 4 |[39m [33m<[39m[33mreplit_final_file[39m[33m>[39m
 [90m 5 |[39m [36mimport[39m [33mReact[39m[33m,[39m { useState[33m,[39m useRef[33m,[39m useEffect } [36mfrom[39m [32m'react'[39m[33m;[39m
 [90m 6 |[39m [36mimport[39m {[0m
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at TypeScriptParserMixin.semicolon (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6923:10)
    at TypeScriptParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13285:10)
    at TypeScriptParserMixin.parseExpressionStatement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9611:26)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12899:19)
    at TypeScriptParserMixin.parseStatementContent (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9527:18)
    at TypeScriptParserMixin.parseStatementLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12767:17)
    at TypeScriptParserMixin.parseModuleItem (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12744:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13316:36)
    at TypeScriptParserMixin.parseBlockBody (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:13309:10)
    at TypeScriptParserMixin.parseProgram (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12625:10)
    at TypeScriptParserMixin.parseTopLevel (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12615:25)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14492:10)
    at TypeScriptParserMixin.parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10144:18)
    at parse (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:14505:26)
    at parser (/Users/expo/workingdir/build/node_modules/@babel/core/lib/parser/index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transformation/index.js:22:50)
    at run.next (<anonymous>)
    at transform (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (/Users/expo/workingdir/build/node_modules/gensync/index.js:251:28)
    at sync (/Users/expo/workingdir/build/node_modules/gensync/index.js:89:14)
    at stopHiding - secret - don't use this - v1 (/Users/expo/workingdir/build/node_modules/@babel/core/lib/errors/rewrite-stack-trace.js:47:12)
    at Object.transformSync (/Users/expo/workingdir/build/node_modules/@babel/core/lib/transform.js:42:76)
    at parseWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:75:18)
    at transformSync (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transformSync.js:54:16)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/babel-transformer.js:118:58)
    at transformJSWithBabel (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:470:47)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/metro-transform-worker.js:585:12)
    at Object.transform (/Users/expo/workingdir/build/node_modules/@expo/metro-config/build/transform-worker/transform-worker.js:175:23)
    at transformFile (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:57:36)
    at Object.transform (/Users/expo/workingdir/build/node_modules/metro/src/DeltaBundler/Worker.flow.js:33:10)
    at execFunction (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:149:17)
    at execHelper (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:137:5)
    at execMethod (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:140:5)
    at process.messageListener (/Users/expo/workingdir/build/node_modules/jest-worker/build/workers/processChild.js:44:7)
    at process.emit (node:events:524:28)
    at emit (node:internal/child_process:950:14)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
